--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -352,6 +352,14 @@ img {
   transition: 0.3s;
 }
 
+.button--white{
+  background-color: #FFF;
+  color: var(--first-color);
+}
+
+.button--white:hover{
+  background-color: #FFF;
+}
 .button--flex{
   display: inline-flex;
   align-items: center;
@@ -779,7 +787,34 @@ img {
 
 
 /*==================== PROJECT IN MIND ====================*/
+.project{
+  text-align: center;
+}
 
+.project__bg{
+  background-color: var(--first-color-second);
+  padding-top: 3rem;
+}
+
+.project__title{
+  font-size: var(--h2-font-size);
+  margin-bottom: var(--mb-0-75);
+
+}
+
+.project__description{
+  margin-bottom: var(--mb-1-5);
+}
+
+.project__title,
+.project__description{
+  color: #FFF;
+}
+
+.project__img{
+  width: 232px;
+  justify-self: center;
+}
 
 /*==================== TESTIMONIAL ====================*/
 
